--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
     <div class="container">
 <h1>To do list</h1>
+<div class="input-section">
+    <input type="text" id="task-input" placeholder="Please enter task...">
+    <button id="add-btn">Add</button>
+</div>
+
 
     </div>
     <script src="script.js"></script>
