--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <input type="text" id="task-input" placeholder="Please enter task...">
     <button id="add-btn">Add</button>
 </div>
+<ul id="task-list"></ul>
 
 
     </div>
