--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
 <h1>To do list</h1>
 <div class="input-section">
-    <input type="text" id="task-input" placeholder="Please enter task...">
+    <input type="text" id="task-input" placeholder="Please enter task... " value="">
     <button id="add-btn">Add</button>
 </div>
 <ul id="task-list"></ul>
